crates/rune-cli/tests/snapshots/inspection__a_command_that_runs_rune_is_named_as_one.snap
---
source: crates/rune-cli/tests/inspection.rs
description: a command that runs rune on another script
expression: reported(&nested)
---
release

command      rune run build
runs rune    starts rune again
directory    .

resolved through
  rune.config.ts  release  runs `rune run build`
