crates/rune-cli/tests/snapshots/inspection__a_config_that_took_no_part_is_named.snap
---
source: crates/rune-cli/tests/inspection.rs
description: a config between the package and the root
expression: reported(&passed_over)
---
lint

command      biome lint .
directory    apps/api

resolved through
  rune.config.ts       lint  runs `biome lint .`
  apps/rune.config.ts        took no part — only the nearest config and the root are read
