crates/rune-cli/tests/snapshots/inspection__a_value_cannot_break_the_report.snap
---
source: crates/rune-cli/tests/inspection.rs
description: values the report has to survive
expression: report
---
probe

command      faketool.exe report-env
directory    .
environment  BIG=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx… (1048576 characters)  `.env`
             LINES=one\ntwo                        `.env`
env files    `.env`  2 assignments used, 0 ignored

resolved through
  rune.config.ts  probe  runs `faketool.exe report-env`, reads `.env`
